--- a/paper/content.tex
+++ b/paper/content.tex
@@ -1268,11 +1268,11 @@ Let~${P = \{p_k\}_{k=1}^K}$ be a set of~$K$ antecedents,
 and let~$\Pi$ be the set of all $K$-prefixes corresponding to
 permutations of antecedents in~$P$.
 %
-Let~$\RL$ be a rule list with prefix~${\Prefix \in \Pi}$,
+Now, let~$\RL$ be a rule list with prefix~$\Prefix$ in~$\Pi$,
 such that~$\RL$ has the minimum objective over all rule lists
 with prefixes in~$\Pi$.
 %
-Let~$\RL'$ be rule list whose prefix~$\Prefix'$ starts with~$\Prefix$,
+Finally, let~$\RL'$ be rule list whose prefix~$\Prefix'$ starts with~$\Prefix$,
 such that~$\RL'$ has the minimum objective over all rule lists
 whose prefixes start with~$\Prefix$.
 %
