Cynthia: typo in permutation bound intro

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -1272,9 +1272,9 @@ Now, let~$\RL$ be a rule list with prefix~$\Prefix$ in~$\Pi$,
 such that~$\RL$ has the minimum objective over all rule lists
 with prefixes in~$\Pi$.
 %
-Finally, let~$\RL'$ be rule list whose prefix~$\Prefix'$ starts with~$\Prefix$,
-such that~$\RL'$ has the minimum objective over all rule lists
-whose prefixes start with~$\Prefix$.
+Finally, let~$\RL'$ be a rule list whose prefix~$\Prefix'$
+starts with~$\Prefix$, such that~$\RL'$ has the minimum objective
+over all rule lists whose prefixes start with~$\Prefix$.
 %
 Theorem~\ref{thm:permutation} below implies that~$\RL'$
 also has the minimum objective over all rule lists whose
